# ligence_task

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  SRS.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  pyproject.toml  start.sh  stop.sh
src/image_processing_service/: main.py
src/image_processing_service/app/: __init__.py
src/image_processing_service/app/api/: internal.py  public.py
src/verification_service/: main.py
src/web_interface/: index.html  main.py  package-lock.json  package.json  vite.config.js
src/web_interface/src/: App.jsx
src/web_interface/templates/: index.html
storage/databases/: .gitkeep
storage/images/modified/: .gitkeep
storage/images/original/: .gitkeep
storage/temp/: .gitkeep
tests/: shared_fixtures.py
tests/assets/: create_test_images.py
tests/image_processing_service/: conftest.py  test_api_internal.py  test_api_public.py  test_e2e_workflow.py  test_file_storage.py  test_instruction_storage.py  test_integration.py  test_processing_orchestrator.py  test_tortoise_models.py  test_variant_generation.py
tests/image_processing_service/algorithms/: test_xor_transform.py
tests/system/: conftest.py  test_integration.py
tests/verification_service/: conftest.py  test_e2e_verification_workflow.py  test_image_comparison.py  test_image_reversal.py  test_instruction_parser.py  test_instruction_retrieval.py  test_internal_api.py  test_public_api.py  test_verification_history.py  test_verification_orchestrator.py  test_verification_service.py
tests/web_interface/: test_web_server.py
(+44 files in other folders)
